# slowfast

./: .gitignore  .gitmodules  Makefile  gpu.py  main.py  pyproject.toml  requirements.txt  sing
configs/EPIC-KITCHENS/: SLOWFAST_8x8_R50.yaml  SLOWFAST_GRU_8x8_R50.yaml  sf-gru-test.yaml  sf-gru-train.yaml
pddl/: custom_problem.pddl  domain.pddl  full_domain.pddl  pddl-definitions.json  problem.pddl
slowfast/config/: defaults.py
slowfast/datasets/: __init__.py  build.py  decoder.py  epickitchens.py  epickitchens_gru.py  epickitchens_record_gru.py  frame_loader.py  loader.py
slowfast/models/: __init__.py  build.py  gru_head_helper.py  head_helper.py  video_model_builder.py
slowfast/utils/: checkpoint.py  meters.py  metrics.py  misc.py
src/: dataset.py  pddl.py  plot.py  test_pddl.py  transforms.py  utils.py
src/audio_extraction/: extract_audio.py  wav_to_hdf5.py
tests/: test_dataloader.py  test_gru_dataloader.py
tools/: eval_net.py  run_net.py  test_net.py  train_net.py
